# oflo-agent-protocol

./: .gitignore  PROTOCOL.md  PROTOCOL_MULTILANG.md  README.md  __init__.py  main.py  oflo-agent-lite.py  pyproject.toml  requirements.txt  setup.py  standards.md
examples/: v2_demo.py  v2_integrations_demo.py
examples/langgraph-example/: main.py
examples/marketing-oflo/: marketing-agent.py
examples/marketing-oflo/worker/: package-lock.json  package.json  wrangler.jsonc
examples/marketing-oflo/worker/public/: index.html
examples/marketing-oflo/worker/src/: entry.py
examples/ping-pong-oflo/: ping_pong_agent.py  ping_pong_client.py
examples/ping-pong-oflo/worker/: package-lock.json  package.json  tsconfig.json  webpack.config.js  wrangler.toml
examples/ping-pong-oflo/worker/src/: ping_pong_agent.py  worker.ts
examples/revenue-oflo/: README.md  requirements.txt  server.py
examples/sales-oflo/: sales-agent.py
examples/trader-oflo/: README.md  stock_trader_agent.py
oflo_agent_protocol/: __init__.py  agent.py  factory.py
oflo_agent_protocol/adapters/: openai_agents_adapter.py
oflo_agent_protocol/audit/: audit_logger.py  guardrails.py  telemetry.py
oflo_agent_protocol/connectors/: __init__.py  composio_connector.py
oflo_agent_protocol/core/: agent.py  message.py  registry.py  types.py
oflo_agent_protocol/managers/: agent_manager.py
oflo_agent_protocol/memory/: memory_manager.py  redis_memory.py
oflo_agent_protocol/projects/: base_project.py
oflo_agent_protocol/protocols/a2a/: client.py  server.py  types.py
oflo_agent_protocol/protocols/mcp/: client.py  server.py
oflo_agent_protocol/routing/: llm_router.py  providers.py
oflo_agent_protocol/runtimes/: base_runtime.py  claude_runtime.py  daytona_runtime.py  langgraph_runtime.py  openai_runtime.py  openrouter_runtime.py
oflo_agent_protocol/voice/: __init__.py  audio_interface.py  voice_agent.py
pipelines/: rag.py
services/: aimon.py  telemetry.py  weaviate.py
tests/: conftest.py  test_audit.py  test_composio.py  test_core.py  test_routing.py
