[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oflo-ai-agent-protocol"
version = "2.0.0"
description = "Modular, auditable, multi-LLM agent protocol — MCP, A2A, smart routing, voice, Daytona sandbox, Composio connectors."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Ankit Buti", email = "ankit@oflo.ai" }]
requires-python = ">=3.10"
keywords = ["ai", "agents", "llm", "mcp", "a2a", "anthropic", "openai", "composio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
all = [
    "anthropic>=0.37.0",
    "openai>=1.30.0",
    "composio>=0.7.0",
    "elevenlabs>=1.0.0",
    "daytona>=0.1.0",
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "weaviate-client>=4.5.0",
]
anthropic = ["anthropic>=0.37.0"]
openai    = ["openai>=1.30.0"]
composio  = ["composio>=0.7.0"]
voice     = ["elevenlabs>=1.0.0", "pyaudio>=0.2.14"]
daytona   = ["daytona>=0.1.0"]
langchain = [
    "langchain>=0.2.0",
    "langchain-core>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length    = 100
target-version = ["py310", "py311", "py312"]

[tool.isort]
profile          = "black"
multi_line_output = 3
line_length      = 100

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
warn_return_any        = false
